videoaggregator: Always set the pad's buffer_vinfo when storing a buffer

Otherwise it might be unset, and then the buffer is used and
gst_video_frame_map() will crash because of invalid video-info.

https://bugzilla.gnome.org/show_bug.cgi?id=753805